# pastella-miner

./: BUILD.md  CMakeLists.txt  PRESETS.md  README.md  build.bat  config.json
.github/workflows/: build.yml
include/: config_manager.h  daemon_miner.h  mining_coordinator.h  mining_types.h  pool_miner.h  sha256.h  types.h
include/daemon/: daemon_client.h  pool_miner.h
include/json/: json.h
include/mining/: cpu_miner.h  gpu_miner.h  mining_coordinator.h  mining_manager.h
include/transactions/: transaction_manager.h
include/utils/: crypto_utils.h  logger.h  mining_utils.h
include/velora/: velora_algorithm.h  velora_miner.h
src/: config.h  config_manager.cpp  daemon_miner.cpp  main.cpp  pool_miner.cpp  sha256n.cu  sha256n.cuh  working_main.cpp
src/daemon/: daemon_client.cpp
src/transactions/: transaction_manager.cpp
src/utils/: crypto_utils.cpp  logger.cpp  mining_utils.cpp
src/velora/: velora_algorithm.cpp  velora_kernel.cu  velora_miner.cpp
